SwaggerForAuthor
